--- a/web/templates/html/about.html
+++ b/web/templates/html/about.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,20 +15,20 @@
 <meta name="description" content="">
 <meta name="author" content=""> 
 <!-- bootstrap css -->
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 <!-- style css -->
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 <!-- Responsive-->
-<link rel="stylesheet" href="css/responsive.css">
+<link rel="stylesheet" href="{% static 'css/responsive.css' %}">
 <!-- fevicon -->
-<link rel="icon" href="images/fevicon.png" type="image/gif" />
+<link rel="icon" href="{% static 'images/fevicon.png' %}" type="image/gif" />
 <!-- Scrollbar Custom CSS -->
-<link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+<link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
 <!-- Tweaks for older IEs-->
 <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 <!-- owl stylesheets --> 
-<link rel="stylesheet" href="css/owl.carousel.min.css">
-<link rel="stylesheet" href="css/owl.theme.default.min.css">
+<link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
 </head>
 <body>
@@ -36,12 +37,12 @@
       <div class="mobile_menu">
       </div>
       <div class="container">
-        <div class="logo"><a href="index.html"><img src="images/logo1.png"></a></div>
+        <div class="logo"><a href="index.html"><img src="{% static 'images/logo1.png' %}"></a></div>
         <div class="menu_main">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">Management</a></li>
-            <li><a href="classes.html">View</a></li>
+            <li><a href="{% url 'web:main' %}">Home</a></li>
+            <li><a href="{% url 'web:about' %}">Management</a></li>
+            <li><a href="{% url 'web:view' %}">View</a></li>
             <!-- <li><a href="events.html">Events</a></li>
             <li><a href="news.html">News</a></li>-->
           </ul>
@@ -53,27 +54,81 @@
     <div class="about_section layout_padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-2">
           </div>
-          <div class="col-md-8">
+          <div class="col-xs-6">
             <h1 class="live_text">대상자 관리</h1>
-            <form method="POST" enctype="multipart/form-data">
-              <!--  {% csrf_token %}
-                {{ modelform }}-->
-                <div class="read_bt1">
-                    <div class="col-lg-4 col-sm-6">
-                <input type="file" name="q" id="file" >
+            <div class="row">
+              <form method="POST" action="{% url 'web:upload_file' %}" enctype="multipart/form-data">
+                  {% csrf_token %}
+                    <!-- {{ modelform }}-->
+                    <!-- <div class="col-md-3 col-sm-6"> -->
+                    <input type="file" name="file" id="file" >
+                  <!-- </div> -->
+                  <!-- <div class="col-md-3 col-sm-6"></div>
+                  <div class="col-md-3 col-sm-6"></div> -->
+                    <button type="submit" id="but" value='전송' 
+                    style="background:#23a3a7; color:#fff; padding:15px 15px; line-height:30px;  cursor:pointer; display:inline-block; ">data upload 
+                    </button>
+                    <!--  <a id="id_uploaded_file" href="{ uploadFileModel.file.url }" download>Download</a>-->
+                    </form> 
+                  </div>
+                <h1 class="live_text">DataFrame</h1>
+                <table class="styled-table"  width="150%">
+                  <thead>
+                      <tr>
+                          <th >Name</th>
+                          <th>Age</th>
+                          <th>Address</th>
+                          <th>Phone</th>
+                          <th>send</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                    <tr class="active-row">
+                          <td >김송류</td>
+                          <td>999222</td>
+                          <td>서울시...</td>
+                          <td>010-0000-0000</td>
+                          <td>
+                            <a href="" class="btn btn-primary"">Send</a>
+                          </td>
+                      </tr>
+                      <tr class="active-row">
+                        <td>도영훈</td>
+                        <td>999222</td>
+                        <td>서울시</td>
+                        <td>010-0000-0000</td>
+                        <td>
+                          <a href="" class="btn btn-primary">Send</a>
+                        </td>
+                        <tr class="active-row">
+                          <td>이태검</td>
+                          <td>999222</td>
+                          <td>서울시</td>
+                          <td>010-0000-0000</td>
+                          <td>
+                            <a href="" class="btn btn-primary"">Send</a>
+                          </td>
+                          <tr class="active-row">
+                          <td>최소영</td>
+                          <td>999222</td>
+                          <td>서울시</td>
+                          <td>010-0000-0000</td>
+                          <td>
+                            <a href="" class="btn btn-primary"">Send</a>
+                          </td>                
+                      <!-- and so on... -->
+                  </tbody>
+              </table>
               </div>
-                <button type="submit" name='file' id="but" value='전송' 
-                style="background:#23a3a7; color:#fff; padding:0px 15px; line-height:30px; cursor:pointer; display:inline-block; ">data upload 
-                </button>
-                <!--  <a id="id_uploaded_file" href="{ uploadFileModel.file.url }" download>Download</a>-->
-              </form>
-          </div>
+            </div>
+            
+            
           </div>
         </div>
-      </div>
-    </div>
+
+
     <!-- about section end --> 
     <!-- footer section start -->
     <div class="footer_section layout_padding">
@@ -90,11 +145,11 @@
             <p class="footer_lorem_text2">Email:info@company.comm</p>
             <div class="social_icon">
             <ul>
-              <li><a href="#"><img src="images/fb-icon.png"></a></li>
-              <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-              <li><a href="#"><img src="images/google-icon.png"></a></li>
-              <li><a href="#"><img src="images/linkedin-icon.png"></a></li>
-              <li><a href="#"><img src="images/youtub-icon.png"></a></li>
+              <li><a href="#"><img src="{% static 'images/fb-icon.png' %}"></a></li>
+              <li><a href="#"><img src="{% static 'images/twitter-icon.png' %}"></a></li>
+              <li><a href="#"><img src="{% static 'images/google-icon.png' %}"></a></li>
+              <li><a href="#"><img src="{% static 'images/linkedin-icon.png' %}"></a></li>
+              <li><a href="#"><img src="{% static 'images/youtub-icon.png' %}"></a></li>
             </ul>
           </div>
           </div>
