--- a/web/templates/html/classes.html
+++ b/web/templates/html/classes.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,20 +15,19 @@
 <meta name="description" content="">
 <meta name="author" content=""> 
 <!-- bootstrap css -->
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 <!-- style css -->
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 <!-- Responsive-->
-<link rel="stylesheet" href="css/responsive.css">
+<link rel="stylesheet" href="{% static 'css/responsive.css' %}">
 <!-- fevicon -->
-<link rel="icon" href="images/fevicon.png" type="image/gif" />
 <!-- Scrollbar Custom CSS -->
-<link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+<link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
 <!-- Tweaks for older IEs-->
 <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 <!-- owl stylesheets --> 
-<link rel="stylesheet" href="css/owl.carousel.min.css">
-<link rel="stylesheet" href="css/owl.theme.default.min.css">
+<link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
 </head>
 <body>
@@ -35,32 +35,32 @@
     <div class="header_section">
       <div class="mobile_menu">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="logo_mobile"><a href="index.html"><img src="images/logo.png"></a></div>
+          <div class="logo_mobile"><a href="index.html"><img src="{% static 'images/logo1.png' %}"></a></div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="{% url 'web:main' %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="{% url 'web:about' %}">Management</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="classes.html">VIEW</a>
+                <a class="nav-link" href="{% url 'web:view' %}">VIEW</a>
               </li>
             </ul>
           </div>
         </nav>
       </div>
       <div class="container">
-        <div class="logo"><a href="index.html"><img src="images/logo1.png"></a></div>
+        <div class="logo"><a href="index.html"><img src="{% static 'images/logo1.png' %}"></a></div>
         <div class="menu_main">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="classes.html">VIEW</a></li>
+            <li><a href="{% url 'web:main' %}">Home</a></li>
+            <li><a href="{% url 'web:about' %}">About</a></li>
+            <li><a href="{% url 'web:view' %}">VIEW</a></li>
           </ul>
         </div>
       </div>
@@ -68,45 +68,66 @@
     <!-- header section end -->
     <!-- classes section start -->
     <div class="classes_section layout_padding">
-    </div>
-    <!-- classes section end -->
-    <!-- footer section start -->
-    <div class="footer_section layout_padding">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 col-sm-6">
-            <h1 class="customer_text">About</h1>
-            <p class="footer_lorem_text">설명</p>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <h1 class="customer_text">Address</h1>
-            <p class="footer_lorem_text1">Address: 서울특별시 강남구 학동로 426</p>
-            <p class="footer_lorem_text2">Tel: 02-3423-5114</p>
-            <p class="footer_lorem_text2">FAX: 02-3423-8800</p>
-            <div class="social_icon">
-            <ul>
-              <li><a href="#"><img src="images/fb-icon.png"></a></li>
-              <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-              <li><a href="#"><img src="images/google-icon.png"></a></li>
-              <li><a href="#"><img src="images/linkedin-icon.png"></a></li>
-              <li><a href="#"><img src="images/youtub-icon.png"></a></li>
-            </ul>
-          </div>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <h1 class="customer_text">OUR Timings</h1>
-            <div class="time_main">
-              <div class="footer_lorem_text">Monday <span class="monday_text">8:00 am - 6:00 pm</span></div>
-              <div class="footer_lorem_text">Tuesday <span class="monday_text1">8:00 am - 6:00 pm</span></div>
-              <div class="footer_lorem_text">Thursday <span class="monday_text2">8:00 am - 6:00 pm</span></div>
-              <div class="footer_lorem_text">Friday <span class="monday_text3">8:00 am - 6:00 pm</span></div>
-              <div class="footer_lorem_text">Saturday <span class="monday_text4">8:00 am - 6:00 pm</span></div>
-              <div class="footer_lorem_text">Sunday <span class="monday_text5">CLOSED</span></div>
-              </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <!-- classes section end -->
+    <!-- footer section start -->
+    <h1 class="live_text">사용 현황</h1>
+
+  <table class="styled-table"  width="80%">
+    <thead>
+        <tr>
+            <th >Name</th>
+            <th>Age</th>
+            <th>Address</th>
+            <th>Phone</th>
+            <th>사용날짜</th>
+            <th>사용금액</th>
+            <th>남은금액</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr class="active-row">
+            <td>김송류</td>
+            <td>999222</td>
+            <td>서울시...</td>
+            <td>010-0000-0000</td>
+            <td>2022.12.2</td>
+            <td>5600</td>
+            <td>1000000</td>
+
+        </tr>
+        <tr class="active-row">
+          <td>도영훈</td>
+          <td>999222</td>
+          <td>서울시</td>
+          <td>010-0000-0000</td>
+          <td>2022.12.2</td>
+          <td>5600</td>
+          <td>0</td>
+          <tr class="active-row">
+            <td>이태검</td>
+            <td>999222</td>
+            <td>서울시</td>
+            <td>010-0000-0000</td>
+            <td>2022.12.2</td>
+            <td>5600</td>
+            <td>1</td>
+            <tr class="active-row">
+            <td>최소영</td>
+            <td>999222</td>
+            <td>서울시</td>
+            <td>2022.12.2</td>
+            <td>010-0000-0000</td>
+            <td>5600</td>
+            <td>1000000</td>
+        </tr>
+        <!-- and so on... -->
+    </tbody>
+</table>
+</div>
+</div>
+</div>
     <!--  footer section end -->
     <!-- copyright section start -->
     <div class="copyright_section">
