--- a/web/templates/html/index.html
+++ b/web/templates/html/index.html
@@ -30,6 +30,7 @@
 <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+<link rel="stylesheet"  href="{% static 'css/style.css' %}">
 </head>
 <body>
     <!-- header section start -->
@@ -42,13 +43,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Management</a>
+                <a class="nav-link" href="{% url 'web:about' %}">Management</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="classes.html">VIEW</a>
+                <a class="nav-link" href="{% url 'web:view' %}">VIEW</a>
               </li>
             </ul>
           </div>
@@ -66,10 +67,10 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Management</a>
+                <a class="nav-link" href="{% url 'web:about' %}">Management</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="classes.html">VIEW</a>
+                <a class="nav-link" href="{% url 'web:view' %}">VIEW</a>
               </li>
             </ul>
           </div>
@@ -80,8 +81,8 @@
         <div class="menu_main">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">Management</a></li>
-            <li><a href="classes.html">VIEW</a></li>
+            <li><a href="{% url 'web:about' %}">Management</a></li>
+            <li><a href="{% url 'web:view' %}">VIEW</a></li>
             <!--<li><a href="events.html">Events</a></li>
             <li><a href="news.html">News</a></li>-->
           </ul>
@@ -98,7 +99,7 @@
     <div class="about_section layout_padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-2">
           </div>
           <div class="col-md-6">
             <h1 class="live_text">금융 취약계층 관리 PORTAL</h1>
@@ -107,7 +108,11 @@
               1인가구 중 금융연체자 데이터를 기반으로 상호 인터렉션을 통한 현황을 파악하고 지원하는 맞춤형 Web<li></li></p>
             <div class="online_bt_main">
               <div class="read_bt1"><a href="#">Read More</a></div>
+              <div class="col-md-5">
+              </div>
             </div>
+            
+            
           </div>
         </div>
       </div>
