--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -363,7 +363,7 @@ button {
     float: left;
     font-size: 16px;
     color: #ffffff;
-    background-color: #0a47f6;
+    background-color: #2ceacb;
     text-align: center;
     padding: 10px 0px;
     border-radius: 30px;
@@ -402,16 +402,16 @@ button {
 .box_main {
     width: 100%;
     float: left;
-    background-color: #162a87;
+    background-color: #2ceacb;
     height: auto;
     padding: 30px;
 }
 .box_main.active {
-    background-color: #162a87;
+    background-color: #2ceacb;
 }
 
 .box_main:hover {
-    background-color: #162a87;
+    background-color: #2ceacb;
 }
 .internet_icon {
     width: 21%;
@@ -498,18 +498,18 @@ button {
     float: left;
     font-size: 16px;
     color: #ffffff;
-    background-color: #2e3192;
+    background-color: #2ceacb;
     text-align: center;
     border-radius: 0px;
 }
 .read_bt1 a:hover{
     color: #ffffff;
-    background-color: #46a0cd;
+    background-color: #5cbeb0;
 }
 .product_section {
     width: 100%;
     float: left;
-    background-color: #112986;
+    background-color: #2ceacb;
     height: auto;
     background-repeat: no-repeat;
     background-size: cover;
@@ -665,7 +665,7 @@ button {
     float: left;
     font-size: 16px;
     color: #ffffff;
-    background-color: #2e3192;
+    background-color: #7dd5d4;
     text-align: center;
     padding: 13px 0px;
 }
@@ -784,7 +784,7 @@ button {
     font-size: 20px;
     color: #ffffff;
     text-align: center;
-    background-color: #2e3192;
+    background-color: #7dd5d4;
     padding: 10px 0px;
     text-transform: uppercase;
 }
@@ -902,7 +902,7 @@ button {
 .copyright_section {
     width: 100%;
     float: left;
-    background-color: #112986;
+    background-color: #7ee3da;
     height: auto;
 }
 
@@ -978,17 +978,17 @@ form {
   align-items: center;
 }
 
-body {
+.styled-table body {
   margin: 0;
   background: #eee;
 }
 .styled-table body {
     padding:1.5em;
-    background: #f5f5f5
+    background: #f5f5f5;
   }
   
-  .styled-table  table {
-    border: 1px #a39485 solid;
+  table {
+    border: 1px #48e0ce solid;
     font-size: .9em;
     box-shadow: 0 2px 5px rgba(0,0,0,.25);
     width: 100%;
@@ -997,32 +997,32 @@ body {
     overflow: hidden;
   }
   
-  .styled-table th {
+ th {
     text-align: left;
   }
     
-  .styled-table  thead {
+ thead {
     font-weight: bold;
     color: #fff;
-    background: #73685d;
+    background: #48e0ce;
   }
     
-  .styled-table  td, th {
+td, th {
     padding: 1em .5em;
     vertical-align: middle;
   }
     
-  .styled-table  td {
+td {
     border-bottom: 1px solid rgba(0,0,0,.1);
     background: #fff;
     height: 50%;
   }
   
-  .styled-table a {
-    color: #73685d;
+a {
+    color: #48e0ce;
   }
     
-  .styled-table tbody {
+tbody {
     height: 50%;
   }
    @media all and (max-width: 768px) {
@@ -1070,5 +1070,4 @@ body {
     
     }
 
-
-
+    
