--- a/web/templates/html/about.html
+++ b/web/templates/html/about.html
@@ -91,7 +91,7 @@
                           <td>서울시...</td>
                           <td>010-0000-0000</td>
                           <td>
-                            <a href="" class="btn btn-primary"">Send</a>
+                            <a href="" class="btn btn-primary">Send</a>
                           </td>
                       </tr>
                       <tr class="active-row">
@@ -108,7 +108,7 @@
                           <td>서울시</td>
                           <td>010-0000-0000</td>
                           <td>
-                            <a href="" class="btn btn-primary"">Send</a>
+                            <a href="" class="btn btn-primary">Send</a>
                           </td>
                           <tr class="active-row">
                           <td>최소영</td>
@@ -116,7 +116,7 @@
                           <td>서울시</td>
                           <td>010-0000-0000</td>
                           <td>
-                            <a href="" class="btn btn-primary"">Send</a>
+                            <a href="" class="btn btn-primary">Send</a>
                           </td>                
                       <!-- and so on... -->
                   </tbody>
