--- a/web/templates/html/index.html
+++ b/web/templates/html/index.html
@@ -36,14 +36,14 @@
     <!-- header section start -->
     <div class="header_section">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="logo_mobile"><a href="index.html"><img src="{% static 'images/logo.png' %}"></a></div>
+          {% comment %} <div class="logo_mobile"><a href="{% url 'web:main' %}"><img src="{% static 'images/logo.png' %}"></a></div> {% endcomment %}
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index">Home</a>
+                <a class="nav-link" href="{% url 'web:main' %}">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'web:about' %}">Management</a>
@@ -57,14 +57,14 @@
       
       <div class="mobile_menu">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="logo_mobile"><a href="index.html"><img src="{% static 'images/logo1.png' %}"></a></div>
+          {% comment %} <div class="logo_mobile"><a href="{% url 'web:main' %}"><img src="{% static 'images/logo1.png' %}"></a></div> {% endcomment %}
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="{% url 'web:main' %}">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'web:about' %}">Management</a>
@@ -77,10 +77,10 @@
         </nav>
       </div>
       <div class="container">
-        <div class="logo"><img src="{% static 'images/logo1.png' %}"><a href="index.html"></a></div>
+        <div class="logo"><img src="{% static 'images/logo1.png' %}"><a href="{% url 'web:main' %}"></a></div>
         <div class="menu_main">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'web:main' %}">Home</a></li>
             <li><a href="{% url 'web:about' %}">Management</a></li>
             <li><a href="{% url 'web:view' %}">VIEW</a></li>
             <!--<li><a href="events.html">Events</a></li>
@@ -154,10 +154,10 @@
             <div class="social_icon">
             <ul>
               <li><a href="#"><img src="{% static 'images/fb-icon.png' %}"></a></li>
-              <li><a href="#"><img src="{% static 'images/twitter-icon.png' $}"></a></li>
-              <li><a href="#"><img src="{% static 'images/google-icon.png' $}"></a></li>
-              <li><a href="#"><img src="{% static 'images/linkedin-icon.png' $}"></a></li>
-              <li><a href="#"><img src="{% static 'images/youtub-icon.png' $}"></a></li>
+              <li><a href="#"><img src="{% static 'images/twitter-icon.png' %}"></a></li>
+              <li><a href="#"><img src="{% static 'images/google-icon.png' %}"></a></li>
+              <li><a href="#"><img src="{% static 'images/linkedin-icon.png' %}"></a></li>
+              <li><a href="#"><img src="{% static 'images/youtub-icon.png' %}"></a></li>
             </ul>
           </div>
           </div>
