--- a/web/templates/html/voucher.html
+++ b/web/templates/html/voucher.html
@@ -107,9 +107,13 @@
           <ul>
             <li><a href="{% url 'web:main' %}">Home</a></li>
             <li><a href="{% url 'web:about' %}">Management</a></li>
-            <li><a href="{% url 'web:show_vouchers' %}">VIEW</a></li>
+            <li><a href="{% url 'web:show_vouchers' %}">Voucher</a></li>
+            <li><a href="{% url 'web:show_payment_info' %}">Payment</a></li>
+            
             {% if user.is_authenticated %}
-            <a href="{% url 'web:logout' %}">로그아웃</a>
+            <li>
+              <a style="width=100%; height=100%;" href="{% url 'web:logout' %}"><button type="button" style="width=100%; height=100%;" class="account">logout</button></a>
+              </li>
             {% else %}
             <div style="display: flex; padding-left: 10px; margin-left: 20px">
               <form
@@ -153,7 +157,16 @@
         <div class="row">
           <!-- classes section end -->
           <!-- footer section start -->
-            <h1 class="live_text" style="display:inline-block;">바우처 사용 현황</h1>
+                 
+            <h1 class="live_text" style="
+            border-radius: 10px;
+            margin: 15px;
+            padding: 20px;
+            box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+              rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+              rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+          "
+        >바우처 사용 현황</h1>
             <a  onclick="window.open(this.href, '_blank', 'width=200, height=200'); return false;" href="{% url 'web:make_voucher_page' %}">바우처 생성</a>
           <div class="col"></div>
           <div class="col-6">
